# ComposeSiren

./: .gitignore  CMakeLists.txt  ComposeSiren.jucer  Config.cmake  DEPLOY_RASPBERRY.sh  LocalConfig.cmake.template  RASPBERRY_COMPILE.md  RASPBERRY_QUICKSTART.md  README.md
Assets/: CMakeLists.txt  ComposeSiren.icns
Installers/: .gitignore  CPackBuildInstaller.cmake  CPackPostBuildScripts.cmake.in  CPackPreBuildScripts.cmake.in  CreateDmg.sh.in  Installer.CMakeLists.cmake.in  Installer.Generate.cmake  License.txt  NotarizeDmg.sh.in  RemoveAppBundles.cmake.in  Uninstall.applescript.in  UninstallComposeSiren.command  Welcome.txt
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Packaging/: ReadMe.txt
Packaging/Apple/: CreateDmg.sh.in  MakePackage.cmake  NotarizeDmg.sh.in  Packaging.CMakeLists.cmake.in  RemoveAppBundles.cmake.in  Uninstall.applescript.in
Packaging/Linux/: MakePackage.cmake  composesiren.desktop
Packaging/Windows/: CPackPostBuildScripts.cmake.in  CPackPreBuildScripts.cmake.in  MakePackage.cmake  NSIS.template.in
Releases/: RELEASE_NOTES_v1.5.0.md
Releases/v1.5.0-custom-mix/: INSTALLATION.txt
Releases/v1.5.0-custom-mix/ComposeSiren.app/Contents/: Info.plist
Releases/v1.5.0-custom-mix/ComposeSiren.component/Contents/: Info.plist
Releases/v1.5.0-custom-mix/ComposeSiren.component/Contents/_CodeSignature/: CodeResources
Releases/v1.5.0-linux/: INSTALLATION.txt
Resources/: CMakeLists.txt
Scripts/: ICON_BUILD_PHASE.md  README.md  add_icon_build_phase.py  copy_icon.sh  deploy-raspberry.sh  setup_codesigning.sh
Source/: CMakeLists.txt  CS_midiIN.cpp  CS_midiIN.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sirene.cpp  Sirene.h  allpass.cpp  allpass.h  comb.cpp  comb.h  config.h.in  mareverbe.cpp  mareverbe.h  parameters.h  synth.cpp  synth.h
docs/: ARCHIVE_SAMPLERATE_FIXES.md  CODESIGNING.md  DEVELOPMENT.md  MIDI_CONTROL.md  RASPBERRY_PI.md
